WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310519
StringParsingBuffer::consume() incorrectly returns the whole buffer
https://bugs.webkit.org/show_bug.cgi?id=310519
Summary
StringParsingBuffer::consume() incorrectly returns the whole buffer
Chris Dumez
Reported
2026-03-22 23:19:37 PDT
StringParsingBuffer::consume() incorrectly returns the whole buffer, instead of just the consumed part.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-22 23:20:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61150
EWS
Comment 2
2026-03-23 03:19:22 PDT
Committed
309749@main
(7e2a2b003015): <
https://commits.webkit.org/309749@main
> Reviewed commits have been landed. Closing PR #61150 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-23 03:20:13 PDT
<
rdar://problem/173140434
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug