Cherry-pick 309749@main (7e2a2b003015). https://bugs.webkit.org/show_bug.cgi?id=310519

StringParsingBuffer::consume() incorrectly returns the whole buffer
    https://bugs.webkit.org/show_bug.cgi?id=310519

    Reviewed by Anne van Kesteren.

    StringParsingBuffer::consume() incorrectly returns the whole buffer,
    instead of just the consumed part.

    Test: Tools/TestWebKitAPI/Tests/WTF/StringParsingBuffer.cpp

    * Source/WTF/wtf/text/StringParsingBuffer.h:
    * Tools/TestWebKitAPI/Tests/WTF/StringParsingBuffer.cpp:
    (TestWebKitAPI::TEST(WTF, StringParsingBufferConsumeCount)):

    Canonical link: https://commits.webkit.org/309749@main

Canonical link: https://commits.webkit.org/298234.515@webkitglib/2.50